[gd_scene load_steps=7 format=3 uid="uid://dnoboeblc5phk"]

[ext_resource type="Script" path="res://src/GUI/MainMenu/game_over.gd" id="1_0hwpw"]
[ext_resource type="Texture2D" uid="uid://h7i8uiwlysq2" path="res://assets/images/kenney_1-bit-pack/monochrome_packed.png" id="2_ts7wd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_q7j4i"]
atlas = ExtResource("2_ts7wd")
region = Rect2(768, 336, 16, 16)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gur0a"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
texture = SubResource("AtlasTexture_q7j4i")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0

[sub_resource type="StyleBoxLine" id="StyleBoxLine_aqird"]
color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t7gvl"]
bg_color = Color(0.301961, 0.298039, 0.309804, 1)

[node name="gameover" type="CanvasLayer"]
script = ExtResource("1_0hwpw")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_direction = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(600, 350)
layout_direction = 1
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_gur0a")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(71.892, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0
theme_override_styles/separator = SubResource("StyleBoxLine_aqird")

[node name="Nav" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="ScoreLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/Nav"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Your Score is :"
horizontal_alignment = 1

[node name="Score" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/Nav"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "0"
horizontal_alignment = 1

[node name="Nav2" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="NameLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/Nav2"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Name: "
horizontal_alignment = 1

[node name="name_LineEdit" type="LineEdit" parent="CenterContainer/PanelContainer/VBoxContainer/Nav2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_t7gvl")
max_length = 15

[node name="PasswordLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/Nav2"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "PassWord:"
horizontal_alignment = 1

[node name="password_LineEdit" type="LineEdit" parent="CenterContainer/PanelContainer/VBoxContainer/Nav2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_t7gvl")
max_length = 15
secret = true

[node name="submit_score" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.025, 43.243, 69.73, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 25
text = "Submit score to Leader Board"

[node name="LinkButton" type="LinkButton" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "Please register before submitting score on the leader board"
uri = "http://localhost:5005/"

[node name="Info" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderMedium"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0
theme_override_styles/separator = SubResource("StyleBoxLine_aqird")

[node name="LeaderBoard" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Leader Board"

[node name="NewGame2" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "New Game"

[node name="Quit" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = " Quit"

[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/submit_score" to="." method="_on_submit_score_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/LeaderBoard" to="." method="_on_leader_board_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/NewGame2" to="." method="_on_new_game_2_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
